2nd draft of homepage

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile.jpg" alt="Xinxin's Photo" class="profile-photo">
-            <p>Hi! I'm Xinxin, a linguist specializing in pragmatics and the comprehension of comparison statements. My research explores the cognitive and experimental aspects of how people interpret similes and metaphors. I am particularly interested in bridging theoretical linguistics with empirical methodologies.</p>
+            <img src="profile.JPG" alt="Xinxin's Photo" class="profile-photo">
+            <p>Hi! I'm Xinxin, a linguist specializing in theoretical and experimental pragmatics. My research have been focusing on studying how people interpret and produce figurative language, such as similes, metaphors and metonymies, using diverse experimental methods (e.g., reaction-time studies, eye-tracking). I am currently leading an NLP project aimed at building computational models capable
+                of automatically detecting multiword (extended) metaphor and simile expressions. </p>
         </section>
         
         <section id="news">
             <h2>News & Updates</h2>
             <ul>
-                <li><strong>March 2025:</strong> Presented at the Annual Pragmatics Conference on simile comprehension.</li>
-                <li><strong>February 2025:</strong> New paper on metaphor interpretation accepted in <i>Journal of Pragmatics</i>.</li>
-                <li><strong>January 2025:</strong> Joined a research collaboration between UCL and a Chinese pragmatics institute.</li>
+                <li><strong>March 2025:</strong> My abstract has been accepted at the <a href="https://relevanceresearchers.com/">Relevance Researcher's Network conference</a> this year! I will be presenting a talk on the interpretation of similes and novel category-crossing metaphors in May!</li>
+                <li><strong>January 2025:</strong> I'm co-teaching the pragmatics module <a href="https://ucl-linguistics-short-course.github.io/2024/modules.html#m6">"Literal" Expressions and Their Uses</a> again with Teru and Yolanda! This year, we thoroughly reviewed the concept of <em>literalness</em> and explored various typical literal and non-literal language uses to better understand the boundaries between them.</li>
             </ul>
         </section>
     </main>
