--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">Research</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><a href="Xinxin_CV.pdf" target="_blank">CV</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
