--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
     </header>
     <main>
         <section class="project">
-            <h2>1. Interpretation of Similes and Metaphors</h2>
-            <p>This project investigates how people comprehend figurative comparisons such as similes and metaphors. It uses eye-tracking and reaction-time experiments to compare processing patterns, aiming to distinguish literal vs. figurative mechanisms of interpretation.</p>
+            <h2>1. Interpretation of Comparison statements, Similes and Metaphors</h2>
+            <p>My doctoral research focused on developing a comprehensive, cognitively plausible pragmatic account of comparison statement comprehension (e.g., ‘X is like a Y’), with a strong emphasis 
+                on the interpretation of similes (e.g. ‘John is like a cactus’). I approached this problem from both theoretical and experimental perspectives.</p>
             <ul>
-                <li>Presentation: Relevance Researcher’s Network Conference, May 2025</li>
                 <li>Manuscript in preparation</li>
             </ul>
         </section>
@@ -40,11 +40,11 @@
         </section>
 
         <section class="project">
-            <h2>3. Literal vs. Non-literal Use in Pragmatics Teaching</h2>
-            <p>Part of the UCL short course module “Literal” Expressions and Their Uses, this project explores how literalness is taught and conceptualized, based on co-designed teaching materials and student feedback.</p>
+            <h2>3. Metaphor and Metonymy – Referring and Predicating – Costs and Benefits</h2>
+            <p>This project explores how speakers use metaphor and metonymy to communicate meaning beyond the literal, and how listeners interpret these figurative expressions in context. Using reading time measures and eye-tracking, we investigate the cognitive costs and benefits of metaphors and metonymies when used referentially or predicatively. Our findings aim to reveal whether metaphors are more effective in predication and metonymies in reference, contributing to a deeper theoretical understanding of figurative language use.</p>
             <ul>
-                <li>Teaching module: Jan 2025 (co-taught with Teru and Yolanda)</li>
-                <li>Reflections and examples featured in course materials</li>
+                <li>Carston, R., & Yan, X. (2023). <em>Metaphor processing: Referring and predicating</em>. <strong>Cognition, 238</strong>, 105534. <a href="https://doi.org/10.1016/j.cognition.2023.105534" target="_blank">https://doi.org/10.1016/j.cognition.2023.105534</a></li>
+                
             </ul>
         </section>
     </main>
