--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,21 @@
     </section>
 
     <section>
-      <h2>Book Chapters</h2>
-      <ul>
-        <li>
-          Zou, B., Yan, X., & Li, H. (2018). Students’ perspectives on using online sources and apps for EFL learning in the mobile-assisted language learning context. In B. Zou & M. Thomas (Eds.), <em>Handbook of Research on Integrating Technology Into
+    <h2>Book Chapters</h2>
+    <ul>
+      <li>
+        Zou, B., Yan, X., & Li, H. (2018). Students’ perspectives on using online sources and apps for EFL learning in the mobile-assisted language learning context. 
+        In B. Zou & M. Thomas (Eds.), <em>Handbook of Research on Integrating Technology Into Contemporary Language Learning and Teaching</em> (pp. 328–344). IGI Global. 
+        <a href="https://doi.org/10.4018/978-1-5225-5140-9.ch016" target="_blank">https://doi.org/10.4018/978-1-5225-5140-9.ch016</a>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Manuscripts in Preparation</h2>
+    <ul>
+      <li>Yan, X., Chow, W., & Carston, R. (in prep.). <em>The Processing of Metaphors and Similes: How Form Makes a Difference.</em></li>
+      <li>Yan, X. (in prep.). <em>What really are similes? Distinguishing similes from literal comparisons.</em></li>
+    </ul>
+  </section>
+</main>
