--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Xinxin's Personal Website</h1>
+        <!-- <h1>Welcome to Xinxin's Personal Website</h1> -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,24 +19,33 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section id="about">
             <h2>About Me</h2>
+            <p class="tagline">Pragmatics | Figurative Language | Computational Linguistics</p>
             <img src="profile.JPG" alt="Xinxin's Photo" class="profile-photo">
-            <p>Hi! I'm Xinxin, a linguist specializing in theoretical and experimental pragmatics. My research have been focusing on studying how people interpret and produce figurative language, such as similes, metaphors and metonymies, using diverse experimental methods (e.g., reaction-time studies, eye-tracking). I am currently leading an NLP project aimed at building computational models capable
-                of automatically detecting multiword (extended) metaphor and simile expressions. </p>
+            <p>Hi! I'm Xinxin, a linguist specializing in theoretical and experimental pragmatics. My research has been focusing on studying how people interpret and produce figurative language, such as similes, metaphors, and metonymies, using diverse experimental methods (e.g., reaction-time studies, eye-tracking). I am currently leading an NLP project aimed at building computational models capable of automatically detecting multiword (extended) metaphor and simile expressions.</p>
         </section>
         
         <section id="news">
             <h2>News & Updates</h2>
             <ul>
-                <li><strong>March 2025:</strong> My abstract has been accepted at the <a href="https://relevanceresearchers.com/">Relevance Researcher's Network conference</a> this year! I will be presenting a talk on the interpretation of similes and novel category-crossing metaphors in May!</li>
+                <li><strong>🗓 March 2025:</strong> My abstract has been accepted at the <a href="https://relevanceresearchers.com/">Relevance Researcher's Network conference</a> this year! I will be presenting a talk on the interpretation of similes and novel category-crossing metaphors in May!</li>
                 <li><strong>January 2025:</strong> I'm co-teaching the pragmatics module <a href="https://ucl-linguistics-short-course.github.io/2024/modules.html#m6">"Literal" Expressions and Their Uses</a> again with Teru and Yolanda! This year, we thoroughly reviewed the concept of <em>literalness</em> and explored various typical literal and non-literal language uses to better understand the boundaries between them.</li>
             </ul>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Xinxin | Hosted on GitHub Pages</p>
+        <p>&copy; 2025 Xinxin Yan</p>
+        <div class="footer-links">
+            <a href="mailto:xinxin.yan.15@ucl.ac.uk" title="Email">📧</a>
+            <a href="https://scholar.google.com/citations?user=Sqn72mcAAAAJ&hl=en&oi=sra" target="_blank" title="Google Scholar">📚</a>
+            <a href="https://github.com/xinxin-yan" target="_blank" title="GitHub">🐙</a>
+            <a href="Xinxin_CV.pdf" target="_blank" title="CV">📄</a>
+        </div>
+        <p>Hosted on GitHub Pages</p>
     </footer>
 </body>
 </html>
