--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xinxin's Research</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -38,14 +39,20 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Xinxin Yan</p>
-        <div class="footer-links">
-            <a href="mailto:xinxin.yan.15@ucl.ac.uk" title="Email">📧</a>
-            <a href="https://scholar.google.com/citations?user=Sqn72mcAAAAJ&hl=en&oi=sra" target="_blank" title="Google Scholar">📚</a>
-            <a href="https://github.com/xinxin-yan" target="_blank" title="GitHub">🐙</a>
-            <a href="Xinxin_CV.pdf" target="_blank" title="CV">📄</a>
-        </div>
-        <p>Hosted on GitHub Pages</p>
-    </footer>
+  <p>&copy; 2025 Xinxin Yan</p>
+  <div class="footer-links">
+    <a href="mailto:xinxin.yan.15@ucl.ac.uk" title="Email">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://scholar.google.com/citations?user=Sqn72mcAAAAJ&hl=en&oi=sra" target="_blank" title="Google Scholar">
+      <i class="fas fa-graduation-cap"></i>
+    </a>
+    <a href="https://github.com/xinxin-yan" target="_blank" title="GitHub">
+      <i class="fab fa-github"></i>
+    </a>
+  </div>
+  <p>Hosted on GitHub Pages</p>
+</footer>
+
 </body>
 </html>
